--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "yile-frontend-exam",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sunnisacoder.github.io/web-frontend-exam",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "miragejs": "^0.1.48",
     "sass": "^1.91.0"
   }
